[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "versionix"
version = "0.99.3"
description = "Get version of any tools"
authors = ["Sequana Team"]
license = "BSD-3"
repository = "https://github.com/sequana/versionix"
readme = "README.rst"
keywords = ["versioning", "bioinformatics"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [
    { include = "versionix" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
rich-click = "^1.7.1"
colorlog = "^6.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
black = "^22.1.0"
ipython = "^8.0.1"
pytest-mock = "^3.7.0"
pytest-subprocess = "^1.5.0"

[tool.poetry.scripts]
versionix = "versionix.scripts:main"

